[gd_scene load_steps=2 format=3 uid="uid://chppy7har4fru"]

[ext_resource type="Script" path="res://menu/audio_options.gd" id="1_0pmmm"]

[node name="AudioOptions" type="GridContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -43.0
offset_right = 90.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
columns = 2
script = ExtResource("1_0pmmm")

[node name="MasterVolumeLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"
horizontal_alignment = 2

[node name="MasterVolumeSlider" type="HSlider" parent="." groups=["Slider"]]
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.01
value = 1.0

[node name="BGMVolumeLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"
horizontal_alignment = 2

[node name="BGMVolumeSlider" type="HSlider" parent="." groups=["Slider"]]
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.01
value = 1.0

[node name="SFXVolumeLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Sound Effects Volume"
horizontal_alignment = 2

[node name="SFXVolumeSlider" type="HSlider" parent="." groups=["Slider"]]
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.01
value = 1.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="BGMVolumeSlider" to="." method="_on_bgm_volume_slider_value_changed"]
[connection signal="value_changed" from="SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
